[tool.poetry]
name = "classifier"
version = "0.1.0"
description = "Prediction market classifier Lambda"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
gnomepy = ">=2.3.0"
boto3 = "*"
anthropic = "*"
voyageai = "*"

[tool.poetry.group.lambda.dependencies]
awslambdaric = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
